--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^1.0.2-beta.65",
     "vue": "^3.0.5",
     "vue-router": "4.0.10"
   },
@@ -17,6 +18,7 @@
     "sass": "^1.36.0",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
+    "vite-plugin-style-import": "^1.0.1",
     "vue-tsc": "^0.2.2"
   }
 }
