--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "duckling-markdown-css": "^4.0.1",
     "element-plus": "^1.0.2-beta.65",
     "vditor": "^3.8.6",
